--- a/index.html
+++ b/index.html
@@ -17,22 +17,22 @@
 html, body { height: 100%; overflow: hidden; }
 
 body {
-font-family: ‘IBM Plex Mono’, ‘Courier New’, monospace;
+font-family: ‘IBM Plex Mono’, monospace;
 font-size: 13px;
 line-height: 1.65;
-background: #000;
-color: #fff;
+background: #000000;
+color: #ffffff;
 -webkit-font-smoothing: antialiased;
 }
 
 /* ── SCROLLBAR ── */
 ::-webkit-scrollbar { width: 3px; }
-::-webkit-scrollbar-track { background: #000; }
-::-webkit-scrollbar-thumb { background: #333; }
-::selection { background: #fff; color: #000; }
+::-webkit-scrollbar-track { background: #000000; }
+::-webkit-scrollbar-thumb { background: #333333; }
+::selection { background: #ffffff; color: #000000; }
 
-a { color: #ccc; }
-a:hover { color: #fff; }
+a { color: #cccccc; }
+a:hover { color: #ffffff; }
 
 /* ── SCREENS ── */
 .screen { display: none; height: 100vh; width: 100%; }
@@ -44,7 +44,7 @@ AUTH
 #screen-auth {
 align-items: center;
 justify-content: center;
-background: #000;
+background: #000000;
 }
 
 .auth-wrap {
@@ -71,7 +71,7 @@ letter-spacing: 8px;
 
 .logo-sub {
 font-size: 10px;
-color: #555;
+color: #555555;
 letter-spacing: 2px;
 margin-top: 4px;
 }
@@ -82,51 +82,51 @@ margin-top: 4px;
 .panel-label {
 font-size: 9px;
 letter-spacing: 3px;
-color: #555;
+color: #555555;
 margin-bottom: 2px;
 }
 
 .field-group { display: flex; flex-direction: column; gap: 5px; }
-.field-label { font-size: 9px; letter-spacing: 2px; color: #555; }
+.field-label { font-size: 9px; letter-spacing: 2px; color: #555555; }
 
 .field-input {
 width: 100%;
 background: #0d0d0d;
 border: 1px solid #1e1e1e;
-border-bottom: 1px solid #333;
-color: #fff;
-font-family: ‘IBM Plex Mono’, ‘Courier New’, monospace;
+border-bottom: 1px solid #333333;
+color: #ffffff;
+font-family: ‘IBM Plex Mono’, monospace;
 font-size: 13px;
 padding: 10px 12px;
 outline: none;
 transition: border-bottom-color .15s;
 }
 
-.field-input:focus { border-bottom-color: #fff; background: #111; }
-.field-input::placeholder { color: #333; }
+.field-input:focus { border-bottom-color: #ffffff; background: #111111; }
+.field-input::placeholder { color: #333333; }
 
 .avatar-grid { display: flex; gap: 6px; flex-wrap: wrap; }
 .av-btn {
-background: #111;
+background: #111111;
 border: 1px solid #1e1e1e;
-color: #888;
-font-family: ‘IBM Plex Mono’, ‘Courier New’, monospace;
+color: #888888;
+font-family: ‘IBM Plex Mono’, monospace;
 font-size: 11px;
 padding: 6px 9px;
 cursor: pointer;
 letter-spacing: 1px;
 transition: all .1s;
 }
-.av-btn:hover { background: #1a1a1a; color: #fff; }
-.av-btn.active { background: #fff; color: #000; border-color: #fff; }
+.av-btn:hover { background: #1a1a1a; color: #ffffff; }
+.av-btn.active { background: #ffffff; color: #000000; border-color: #ffffff; }
 
 .auth-actions { display: flex; flex-direction: column; gap: 8px; }
 
 .btn-primary {
-background: #fff;
-border: 1px solid #fff;
-color: #000;
-font-family: ‘IBM Plex Mono’, ‘Courier New’, monospace;
+background: #ffffff;
+border: 1px solid #ffffff;
+color: #000000;
+font-family: ‘IBM Plex Mono’, monospace;
 font-size: 12px;
 font-weight: 600;
 letter-spacing: 3px;
@@ -135,33 +135,33 @@ cursor: pointer;
 transition: all .15s;
 width: 100%;
 }
-.btn-primary:hover { background: #000; color: #fff; }
+.btn-primary:hover { background: #000000; color: #ffffff; }
 
 .btn-ghost {
 background: none;
 border: none;
-color: #555;
-font-family: ‘IBM Plex Mono’, ‘Courier New’, monospace;
+color: #555555;
+font-family: ‘IBM Plex Mono’, monospace;
 font-size: 11px;
 padding: 5px 0;
 cursor: pointer;
 text-align: left;
 transition: color .15s;
 }
-.btn-ghost:hover { color: #ccc; }
+.btn-ghost:hover { color: #cccccc; }
 
 .auth-error {
 font-size: 11px;
-color: #ccc;
-border-left: 2px solid #fff;
+color: #cccccc;
+border-left: 2px solid #ffffff;
 padding: 6px 10px;
-background: #111;
+background: #111111;
 line-height: 1.5;
 }
 
 .auth-loader {
 font-size: 11px;
-color: #555;
+color: #555555;
 letter-spacing: 1px;
 padding: 8px 0;
 }
@@ -170,7 +170,7 @@ padding: 8px 0;
 margin-top: 32px;
 font-size: 9px;
 letter-spacing: 1.5px;
-color: #333;
+color: #333333;
 border-top: 1px solid #1e1e1e;
 padding-top: 14px;
 }
@@ -222,15 +222,15 @@ background: #1a1a1a;
 border: 1px solid #1e1e1e;
 padding: 4px 5px;
 flex-shrink: 0;
-color: #fff;
+color: #ffffff;
 }
 
 .sb-name  { font-size: 12px; font-weight: 600; }
-.sb-email { font-size: 10px; color: #555; word-break: break-all; }
+.sb-email { font-size: 10px; color: #555555; word-break: break-all; }
 
 .online-dot {
 width: 5px; height: 5px;
-background: #fff;
+background: #ffffff;
 border-radius: 50%;
 position: absolute;
 right: 13px; top: 50%;
@@ -238,7 +238,7 @@ transform: translateY(-50%);
 }
 
 .sb-section { padding: 14px 0 6px; border-bottom: 1px solid #1e1e1e; flex-shrink: 0; }
-.sb-label { font-size: 9px; letter-spacing: 3px; color: #333; padding: 0 15px 8px; }
+.sb-label { font-size: 9px; letter-spacing: 3px; color: #333333; padding: 0 15px 8px; }
 .sb-list  { list-style: none; }
 
 .sb-item {
@@ -247,22 +247,22 @@ align-items: center;
 gap: 6px;
 padding: 7px 15px;
 cursor: pointer;
-color: #555;
+color: #555555;
 font-size: 12px;
 transition: all .1s;
 position: relative;
 }
-.sb-item:hover { background: #111; color: #ccc; }
-.sb-item.active { color: #fff; background: #1a1a1a; }
-.sb-item.active::before { content:’’; position:absolute; left:0; top:0; bottom:0; width:2px; background:#fff; }
+.sb-item:hover { background: #111111; color: #cccccc; }
+.sb-item.active { color: #ffffff; background: #1a1a1a; }
+.sb-item.active::before { content:’’; position:absolute; left:0; top:0; bottom:0; width:2px; background:#ffffff; }
 .ol-item { cursor: default; }
 .ol-item:hover { background: transparent; }
 
-.ch-hash { color: #333; font-size: 11px; }
+.ch-hash { color: #333333; font-size: 11px; }
 .ch-badge {
 margin-left: auto;
-background: #fff;
-color: #000;
+background: #ffffff;
+color: #000000;
 font-size: 9px;
 font-weight: 700;
 padding: 1px 5px;
@@ -275,15 +275,15 @@ width: calc(100% - 30px);
 background: none;
 border: 1px solid #1e1e1e;
 border-style: dashed;
-color: #333;
-font-family: ‘IBM Plex Mono’, ‘Courier New’, monospace;
+color: #333333;
+font-family: ‘IBM Plex Mono’, monospace;
 font-size: 11px;
 padding: 6px 10px;
 cursor: pointer;
 text-align: left;
 transition: all .15s;
 }
-.sb-add:hover { color: #fff; border-color: #333; }
+.sb-add:hover { color: #ffffff; border-color: #333333; }
 
 .sb-footer {
 margin-top: auto;
@@ -295,15 +295,15 @@ gap: 3px;
 }
 
 .sb-stat { display: flex; justify-content: space-between; font-size: 9px; }
-.sk { color: #333; letter-spacing: 1px; }
-.sv { color: #888; }
+.sk { color: #333333; letter-spacing: 1px; }
+.sv { color: #888888; }
 
 /* ── ICON BUTTON ── */
 .icon-btn {
 background: none;
 border: none;
-color: #555;
-font-family: ‘IBM Plex Mono’, ‘Courier New’, monospace;
+color: #555555;
+font-family: ‘IBM Plex Mono’, monospace;
 font-size: 15px;
 width: 30px; height: 30px;
 display: flex; align-items: center; justify-content: center;
@@ -311,7 +311,7 @@ cursor: pointer;
 transition: color .1s;
 flex-shrink: 0;
 }
-.icon-btn:hover { color: #fff; }
+.icon-btn:hover { color: #ffffff; }
 
 /* ── MAIN ── */
 #main {
@@ -319,7 +319,7 @@ flex: 1;
 display: flex;
 flex-direction: column;
 overflow: hidden;
-background: #000;
+background: #000000;
 position: relative;
 }
 
@@ -336,10 +336,10 @@ background: #0d0d0d;
 }
 
 .tb-left { display: flex; align-items: baseline; gap: 6px; flex: 1; min-width: 0; }
-.tb-hash { color: #333; }
+.tb-hash { color: #333333; }
 #tb-name { font-size: 13px; font-weight: 600; }
-.tb-sep  { color: #333; font-size: 11px; }
-.tb-desc { font-size: 11px; color: #555; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; }
+.tb-sep  { color: #333333; font-size: 11px; }
+.tb-desc { font-size: 11px; color: #555555; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; }
 .tb-right { display: flex; gap: 2px; flex-shrink: 0; }
 
 /* ── SEARCH ── */
@@ -349,22 +349,22 @@ align-items: center;
 gap: 10px;
 padding: 7px 15px;
 border-bottom: 1px solid #1e1e1e;
-background: #111;
+background: #111111;
 flex-shrink: 0;
 }
 
-.s-prompt { font-size: 11px; color: #333; white-space: nowrap; }
+.s-prompt { font-size: 11px; color: #333333; white-space: nowrap; }
 
 #search-inp {
 flex: 1;
 background: none;
 border: none;
-color: #fff;
-font-family: ‘IBM Plex Mono’, ‘Courier New’, monospace;
+color: #ffffff;
+font-family: ‘IBM Plex Mono’, monospace;
 font-size: 13px;
 outline: none;
 }
-#search-inp::placeholder { color: #333; }
+#search-inp::placeholder { color: #333333; }
 
 /* ── MESSAGES ── */
 #messages {
@@ -382,7 +382,7 @@ gap: 12px;
 padding: 10px 20px;
 font-size: 9px;
 letter-spacing: 2px;
-color: #333;
+color: #333333;
 }
 .day-sep::before, .day-sep::after {
 content: ‘’; flex: 1; height: 1px; background: #1a1a1a;
@@ -406,7 +406,7 @@ to   { opacity: 1; transform: none; }
 .msg-av {
 font-size: 10px;
 letter-spacing: 1px;
-color: #333;
+color: #333333;
 flex-shrink: 0;
 width: 34px;
 padding-top: 3px;
@@ -423,12 +423,12 @@ gap: 8px;
 margin-bottom: 2px;
 }
 
-.msg-name { font-size: 12px; font-weight: 600; color: #fff; }
-.msg.own .msg-name { color: #ccc; }
-.msg-time { font-size: 9px; color: #333; }
+.msg-name { font-size: 12px; font-weight: 600; color: #ffffff; }
+.msg.own .msg-name { color: #cccccc; }
+.msg-time { font-size: 9px; color: #333333; }
 
 .msg-text {
-color: #ccc;
+color: #cccccc;
 font-size: 13px;
 line-height: 1.7;
 white-space: pre-wrap;
@@ -440,13 +440,13 @@ background: #1a1a1a;
 border: 1px solid #1e1e1e;
 padding: 1px 5px;
 font-size: 11px;
-color: #fff;
+color: #ffffff;
 }
 
 .msg-text pre {
-background: #111;
+background: #111111;
 border: 1px solid #1e1e1e;
-border-left: 2px solid #333;
+border-left: 2px solid #333333;
 padding: 10px 12px;
 overflow-x: auto;
 margin-top: 6px;
@@ -454,8 +454,8 @@ margin-top: 6px;
 
 .msg-text pre code { background: none; border: none; padding: 0; font-size: 12px; }
 
-.msg.sys .msg-text { color: #333; font-style: italic; font-size: 11px; }
-.msg.action .msg-text { color: #888; font-style: italic; }
+.msg.sys .msg-text { color: #333333; font-style: italic; font-size: 11px; }
+.msg.action .msg-text { color: #888888; font-style: italic; }
 
 .msg-tools {
 position: absolute;
@@ -468,14 +468,14 @@ transition: opacity .12s;
 .msg-tool {
 background: #1a1a1a;
 border: 1px solid #1e1e1e;
-color: #555;
-font-family: ‘IBM Plex Mono’, ‘Courier New’, monospace;
+color: #555555;
+font-family: ‘IBM Plex Mono’, monospace;
 font-size: 10px;
 padding: 3px 8px;
 cursor: pointer;
 transition: all .1s;
 }
-.msg-tool:hover { background: #fff; color: #000; border-color: #fff; }
+.msg-tool:hover { background: #ffffff; color: #000000; border-color: #ffffff; }
 
 /* ── IMAGE ── */
 .msg-img {
@@ -488,7 +488,7 @@ cursor: pointer;
 object-fit: cover;
 transition: border-color .15s;
 }
-.msg-img:hover { border-color: #fff; }
+.msg-img:hover { border-color: #ffffff; }
 
 /* ── FILE ── */
 .msg-file {
@@ -497,19 +497,19 @@ align-items: center;
 gap: 10px;
 margin-top: 8px;
 padding: 10px 14px;
-background: #111;
+background: #111111;
 border: 1px solid #1e1e1e;
-border-left: 2px solid #333;
+border-left: 2px solid #333333;
 cursor: pointer;
 transition: all .15s;
 max-width: 280px;
 }
-.msg-file:hover { border-left-color: #fff; background: #1a1a1a; }
+.msg-file:hover { border-left-color: #ffffff; background: #1a1a1a; }
 
-.mf-tag  { font-size: 10px; letter-spacing: 1px; color: #555; background: #1a1a1a; padding: 2px 5px; border: 1px solid #1e1e1e; }
-.mf-name { display: block; font-size: 12px; color: #fff; font-weight: 600; }
-.mf-size { display: block; font-size: 10px; color: #555; }
-.mf-dl   { font-size: 14px; color: #555; margin-left: auto; }
+.mf-tag  { font-size: 10px; letter-spacing: 1px; color: #555555; background: #1a1a1a; padding: 2px 5px; border: 1px solid #1e1e1e; }
+.mf-name { display: block; font-size: 12px; color: #ffffff; font-weight: 600; }
+.mf-size { display: block; font-size: 10px; color: #555555; }
+.mf-dl   { font-size: 14px; color: #555555; margin-left: auto; }
 
 /* ── TYPING ── */
 #typing-row {
@@ -518,12 +518,12 @@ align-items: center;
 gap: 8px;
 padding: 3px 20px 3px 65px;
 font-size: 10px;
-color: #333;
+color: #333333;
 flex-shrink: 0;
 }
 
 .t-dots { display: flex; gap: 3px; }
-.t-dots span { width: 3px; height: 3px; background: #333; border-radius: 50%; animation: td 1.1s infinite; }
+.t-dots span { width: 3px; height: 3px; background: #333333; border-radius: 50%; animation: td 1.1s infinite; }
 .t-dots span:nth-child(2) { animation-delay: .18s; }
 .t-dots span:nth-child(3) { animation-delay: .36s; }
 @keyframes td { 0%,60%,100%{transform:translateY(0);opacity:.3} 30%{transform:translateY(-3px);opacity:1} }
@@ -546,29 +546,29 @@ background: #1a1a1a;
 border: 1px solid #1e1e1e;
 padding: 4px 8px;
 font-size: 11px;
-color: #888;
+color: #888888;
 }
 
 .att-thumb { width: 34px; height: 34px; object-fit: cover; border: 1px solid #1e1e1e; }
-.att-tag   { font-size: 10px; letter-spacing: 1px; background: #222; padding: 2px 5px; }
+.att-tag   { font-size: 10px; letter-spacing: 1px; background: #222222; padding: 2px 5px; }
 .att-name  { max-width: 120px; overflow: hidden; text-overflow: ellipsis; white-space: nowrap; }
-.att-rm    { background: none; border: none; color: #333; cursor: pointer; font-size: 11px; transition: color .1s; }
-.att-rm:hover { color: #fff; }
+.att-rm    { background: none; border: none; color: #333333; cursor: pointer; font-size: 11px; transition: color .1s; }
+.att-rm:hover { color: #ffffff; }
 
 #composer-row {
 display: flex;
 align-items: flex-end;
 gap: 8px;
-background: #111;
+background: #111111;
 border: 1px solid #1e1e1e;
 padding: 8px 10px;
 transition: border-color .15s;
 }
-#composer-row:focus-within { border-color: #333; }
+#composer-row:focus-within { border-color: #333333; }
 
 .c-prompt {
 font-size: 11px;
-color: #333;
+color: #333333;
 white-space: nowrap;
 flex-shrink: 0;
 padding-bottom: 1px;
@@ -578,8 +578,8 @@ padding-bottom: 1px;
 flex: 1;
 background: none;
 border: none;
-color: #fff;
-font-family: ‘IBM Plex Mono’, ‘Courier New’, monospace;
+color: #ffffff;
+font-family: ‘IBM Plex Mono’, monospace;
 font-size: 13px;
 outline: none;
 resize: none;
@@ -587,15 +587,15 @@ max-height: 120px;
 overflow-y: auto;
 line-height: 1.65;
 }
-#msg-inp::placeholder { color: #333; }
+#msg-inp::placeholder { color: #333333; }
 
 .c-tools { display: flex; align-items: flex-end; gap: 4px; flex-shrink: 0; }
 
 .tool-btn {
 background: none;
 border: 1px solid #1e1e1e;
-color: #555;
-font-family: ‘IBM Plex Mono’, ‘Courier New’, monospace;
+color: #555555;
+font-family: ‘IBM Plex Mono’, monospace;
 font-size: 10px;
 padding: 5px 8px;
 cursor: pointer;
@@ -603,13 +603,13 @@ letter-spacing: .5px;
 transition: all .1s;
 white-space: nowrap;
 }
-.tool-btn:hover { color: #fff; border-color: #333; background: #1a1a1a; }
+.tool-btn:hover { color: #ffffff; border-color: #333333; background: #1a1a1a; }
 
 .send-btn {
-background: #fff;
-border: 1px solid #fff;
-color: #000;
-font-family: ‘IBM Plex Mono’, ‘Courier New’, monospace;
+background: #ffffff;
+border: 1px solid #ffffff;
+color: #000000;
+font-family: ‘IBM Plex Mono’, monospace;
 font-size: 15px;
 font-weight: 700;
 width: 32px; height: 32px;
@@ -618,18 +618,18 @@ cursor: pointer;
 transition: all .1s;
 flex-shrink: 0;
 }
-.send-btn:hover { background: #000; color: #fff; }
+.send-btn:hover { background: #000000; color: #ffffff; }
 .send-btn:active { transform: scale(.95); }
 
-.c-hint { margin-top: 6px; font-size: 9px; color: #333; display: flex; gap: 10px; }
+.c-hint { margin-top: 6px; font-size: 9px; color: #333333; display: flex; gap: 10px; }
 
 kbd {
 background: #1a1a1a;
 border: 1px solid #1e1e1e;
 padding: 0 4px;
 font-size: 9px;
-font-family: ‘IBM Plex Mono’, ‘Courier New’, monospace;
-color: #888;
+font-family: ‘IBM Plex Mono’, monospace;
+color: #888888;
 }
 
 /* ══════════════════════════════════════
@@ -655,12 +655,12 @@ animation: slide-up .2s cubic-bezier(.16,1,.3,1);
 }
 @keyframes slide-up { from{transform:translateY(8px);opacity:0} to{transform:none;opacity:1} }
 
-.ov-title { font-size: 9px; letter-spacing: 3px; color: #333; margin-bottom: 16px; }
+.ov-title { font-size: 9px; letter-spacing: 3px; color: #333333; margin-bottom: 16px; }
 
 .cmd-table { border-collapse: collapse; width: 100%; margin-bottom: 18px; }
 .cmd-table tr + tr td { padding-top: 8px; }
-.ck { font-size: 12px; color: #fff; padding-right: 18px; white-space: nowrap; }
-.cv { font-size: 11px; color: #555; }
+.ck { font-size: 12px; color: #ffffff; padding-right: 18px; white-space: nowrap; }
+.cv { font-size: 11px; color: #555555; }
 
 /* ── LIGHTBOX ── */
 #lightbox {
@@ -677,23 +677,23 @@ display: flex; flex-direction: column; align-items: center; gap: 8px;
 }
 
 #lb-img { max-width: 90vw; max-height: 85vh; border: 1px solid #2a2a2a; display: block; }
-#lb-meta { font-size: 10px; color: #333; letter-spacing: 1px; }
+#lb-meta { font-size: 10px; color: #333333; letter-spacing: 1px; }
 
 #lb-close {
 position: absolute; top: -14px; right: -14px;
 background: #1a1a1a; border: 1px solid #1e1e1e;
-color: #555; font-family: ‘IBM Plex Mono’, ‘Courier New’, monospace; font-size: 12px;
+color: #555555; font-family: ‘IBM Plex Mono’, monospace; font-size: 12px;
 width: 24px; height: 24px; cursor: pointer;
 display: flex; align-items: center; justify-content: center;
 transition: all .1s;
 }
-#lb-close:hover { background: #fff; color: #000; }
+#lb-close:hover { background: #ffffff; color: #000000; }
 
 /* ── TOAST ── */
 #toast {
 position: fixed; bottom: 18px; right: 18px;
-background: #fff; color: #000;
-font-family: ‘IBM Plex Mono’, ‘Courier New’, monospace; font-size: 11px;
+background: #ffffff; color: #000000;
+font-family: ‘IBM Plex Mono’, monospace; font-size: 11px;
 padding: 9px 14px; z-index: 700;
 animation: toast-in .2s cubic-bezier(.16,1,.3,1);
 }
@@ -1562,7 +1562,7 @@ el.style.height = Math.min(el.scrollHeight, 120) + ‘px’;
 };
 
 // ── DOM EVENTS ────────────────────────────
-document.addEventListener(‘DOMContentLoaded’, () => {
+function initApp() {
 
 ```
 // Auth toggles
@@ -1669,7 +1669,13 @@ document.addEventListener('keydown', e => {
 $('btn-menu')?.addEventListener('click', () => $('sidebar').classList.toggle('open'));
 ```
 
-});
+};
+
+if (document.readyState === ‘loading’) {
+document.addEventListener(‘DOMContentLoaded’, initApp);
+} else {
+initApp();
+}
 </script>
 
 </body>
